--- a/Bootstrap/AppleFooter.css
+++ b/Bootstrap/AppleFooter.css
@@ -5,3 +5,9 @@ a{
     text-decoration: none;
     color: black;
 }
+.bol{
+    font-weight: bold;
+}
+.main{
+    background-color:blanchedalmond;
+}
