--- a/Bootstrap/AppleFooter.css
+++ b/Bootstrap/AppleFooter.css
@@ -9,7 +9,7 @@ a{
     font-weight: bold;
 }
 .main{
-    background-color:blanchedalmond;
+    background-color:rgb(220, 227, 233);
     margin: 20px;
 }
 .col-2{
