--- a/Bootstrap/Zylo.css
+++ b/Bootstrap/Zylo.css
@@ -1,8 +1,7 @@
 body{
     min-height: 35rem;
-    padding-top: 4.5rem;
 }
-.navbar-dark{
+.navbar-light{
     background-color:blueviolet!important ;
 }
 .lg2{
